# quant-toolkit

./: .gitattributes  .gitignore  export_hf.py  moe_registry.py  pyproject.toml  quantize.py  streaming_loader.py
configs/: calib_glm4_7.toml  calib_glm5.toml  calib_minimax_m25.toml  calib_qwen35.toml  calib_qwen35_122b.toml
data/multimodal/: vqa_calib.jsonl
data/multimodal/images/: instances_val2017.json
data/text/: agentic_coding_calib_generic.jsonl  agentic_coding_calib_v3.jsonl  deep_calib.jsonl  diverse_calib.jsonl
models/: __init__.py  base.py  glm4_7.py  glm5.py  minimax_m25.py  qwen3_5_122b.py  qwen3_5_moe.py  qwen3_5_moe_noshared.py
scripts/: quantize_glm4_7.sh  quantize_glm5.sh  quantize_minimax_m25.sh  quantize_qwen35.sh  quantize_qwen35_122b.sh
tools/: build_calib_dataset.py  build_mm_calib.py  compare_input_scales.py  dequantize_fp8.py  fixup_mtp_and_config.py  kv_calib_requests.py  merge_amax.py  merge_kv_scales.py  patch_shared_expert_bf16.py  review_deep_calib.py
